# llm_ops

./: .gitignore
16_LLMOps/: .gitignore  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  README.md  pyproject.toml
16_LLMOps/cache/: 2702da85397fc57915e6c0038b8ba633054f87a2-b671-5ea5-9395-d3d349113974  2702da85397fc57915e6c0038b8ba63307abcb70-5571-58ae-be6b-e52e4731c8df  2702da85397fc57915e6c0038b8ba63309b4e28f-7b3f-5099-bd00-239bc249acd8  2702da85397fc57915e6c0038b8ba6330ee9f278-2ee6-5b8a-b538-63825cc1e824  2702da85397fc57915e6c0038b8ba6330f9950ff-d233-53c3-8088-7fca6c6400b7  2702da85397fc57915e6c0038b8ba6331184cc7b-3134-59ac-aa99-da099531f331  2702da85397fc57915e6c0038b8ba63313b434bd-a09d-5fa1-91bf-3d80dfa917cb  2702da85397fc57915e6c0038b8ba633150dc1bf-b3f1-51b6-83d1-b55b5ce273be  2702da85397fc57915e6c0038b8ba63315ec8e47-8027-56bb-8c05-650e79b041c6  2702da85397fc57915e6c0038b8ba63316360a5b-f6cf-5970-b203-b20ba73c3394  2702da85397fc57915e6c0038b8ba63317a8ed16-60b7-57bf-a337-2c76a7f50a63  2702da85397fc57915e6c0038b8ba6331a3c3552-c66f-5fb3-b7d8-94519012bd77  2702da85397fc57915e6c0038b8ba6331f64a104-c40d-579a-87c1-30a38644587f  2702da85397fc57915e6c0038b8ba6332137c29c-96ee-55e2-803f-96cb7b9d3a3c  2702da85397fc57915e6c0038b8ba633219bbdb1-70f1-5444-a12b-d923b3c02208  2702da85397fc57915e6c0038b8ba63326f31162-a169-58d2-9276-2a12f4e775a2  2702da85397fc57915e6c0038b8ba63329bfb57e-628f-54e7-81e4-1091ae9121aa  2702da85397fc57915e6c0038b8ba6332c37b551-495d-5b2f-916b-34065cf91907  2702da85397fc57915e6c0038b8ba63335f8040a-ae58-5c1d-ba8c-a440378fb34c  (+55 more)
(+24 files in other folders)
