[project]
name = "16-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "langchain_community==0.3.0",
    "langchain_openai==0.2.0",
    "langchain-core==0.3.59",
    "numpy==1.26.4",
    "tenacity==8.1.0",
    "pymupdf==1.24.10",
    "qdrant-client==1.11.2",
    "langchain_qdrant==0.1.4",
    "langsmith==0.1.125",
    "langchain_huggingface==0.2.0",
    "jupyter>=1.1.1",
]
